# Leet-Code-Solutions

./: README.md  main.py  pyproject.toml
go_leetcode/: checkIsSubsequence.go  differntLeetProblem.go  main.go  validPalindrom.go
python_leetcode/: contains_duplicate.py  is_subsequence.py  majority_element.py  merge_sorted_array.py  remove_duplicate_sorted_array_two.py  remove_duplicates_sorted_array.py  remove_element.py  two_sum_two.py  valid_palindrome.py
